--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,8 +70,8 @@ jobs:
             digicatapult/morello-examples:latest
       - name: Build tarball
         run: |
-          mkdir $(pwd)/build;
-          docker run -v $(pwd)/build:/home/cheri/morello-examples/build digicatapult/morello-examples:latest;
+          mkdir -p $(pwd)/build
+          docker run -v $(pwd)/build:/home/cheri/morello-examples/build digicatapult/morello-examples:latest
           tar cfvz ./morello-examples.tar.gz --transform='s%.*/%%' ./build/* ./.version ./.LICENCE
 
       # Build github release
